# internal/provider/job104/oas_response_decoders_gen.go
@@ -13,7 +13,7 @@ import (
 	"github.com/ogen-go/ogen/validate"
 )
 
-func decodeGetJobDetailResponse(resp *http.Response) (res GetJobDetailRes, _ error) {
+func decodeGetJobDetailResponse(resp *http.Response) (res *JobDetailResponse, _ error) {
 	switch resp.StatusCode {
 	case 200:
 		// Code 200.
@@ -30,41 +30,6 @@ func decodeGetJobDetailResponse(resp *http.Response) (res GetJobDetailRes, _ err
 			d := jx.DecodeBytes(buf)
 
 			var response JobDetailResponse
-			if err := func() error {
-				if err := response.Decode(d); err != nil {
-					return err
-				}
-				if err := d.Skip(); err != io.EOF {
-					return errors.New("unexpected trailing data")
-				}
-				return nil
-			}(); err != nil {
-				err = &ogenerrors.DecodeBodyError{
-					ContentType: ct,
-					Body:        buf,
-					Err:         err,
-				}
-				return res, err
-			}
-			return &response, nil
-		default:
-			return res, validate.InvalidContentType(ct)
-		}
-	case 404:
-		// Code 404.
-		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
-		if err != nil {
-			return res, errors.Wrap(err, "parse media type")
-		}
-		switch {
-		case ct == "application/json":
-			buf, err := io.ReadAll(resp.Body)
-			if err != nil {
-				return res, err
-			}
-			d := jx.DecodeBytes(buf)
-
-			var response ErrorResponse
 			if err := func() error {
 				if err := response.Decode(d); err != nil {
 					return err
